syntax = "proto3";

package car.v1;

import "google/api/annotations.proto";
import "google/protobuf/struct.proto";
import "common.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/pigfall/demo-kratos-curdboy/api/car/v1;pbcar";

service Car{
  rpc Create(google.protobuf.Struct) returns(CarCreateResponse){
    option (google.api.http) = { post:"/car" body:"*"  };

    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = { summary:"Create Car"};
  };

  rpc Query(curdboy.common.QueryRequest) returns(CarQueryResponse){
    option (google.api.http) = { get:"/car"  };

    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = { summary:"Find Car"  };

  };
}

message CarCreateResponse{
  int32 id =1;
}

message CarQueryResponse{
  CarQueryResponseMeta meta =1;
  repeated google.protobuf.Struct data=2;
}

message  CarQueryResponseMeta {
  int64 count =1;
}